ingress-testing/ing-new0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx0
  annotations:
    nginx.ingress.kubernetes.io/connection-proxy-header: close
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ubuhq1.eng.platformlab.ibm.com
    http:
      paths:
      - backend:
          serviceName: my-nginx
          servicePort: 80
        path: /s0
