ingress-testing/multi-host-new.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ubuhq2.eng.platformlab.ibm.com
    http:
      paths:
      - backend:
          serviceName: my-nginx
          servicePort: 80
  - host: ubuhq2-2.eng.platformlab.ibm.com
    http:
      paths:
      - backend:
          serviceName: my-nginx
          servicePort: 80
