ingress-testing/multi-path-new.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx2
  annotations:
#    nginx.ingress.kubernetes.io/connection: keep-alive
#    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ubuhq1.eng.platformlab.ibm.com
    http:
      paths:
      - path: /s2
        backend:
          serviceName: my-nginx
          servicePort: 80
      - path: /s3
        backend:
          serviceName: my-nginx
          servicePort: 80
