ingress-testing/test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: my-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ubuhq1.eng.platformlab.ibm.com
    http:
      paths:
      - backend:
          serviceName: metering-ui
          servicePort: 3130
        path: /s1
